regression test summary depends on test set
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/cpp/sdcc@13670 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2022-08-21 Felix Salfelder <felix AT salfelder.org>
+
+	* support/regression/Makefile.in,
+	  support/regression/cases/Makefile.in:
+	  Test summary depends on test set.
+
 2022-08-20 Felix Salfelder <felix AT salfelder.org>
 
 	* support/cpp/gcc/Makefile.in:
