cpp: reduce diff against upstream
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/cpp/sdcc@13671 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2022-08-23 Felix Salfelder <felix AT salfelder.org>
+
+	* support/cpp/configure, support/cpp/configure.ac,
+	  support/cpp/gcc/configure, support/cpp/gcc/configure.ac:
+	  Reduce diff against upstream gcc.
+
 2022-08-21 Felix Salfelder <felix AT salfelder.org>
 
 	* support/regression/Makefile.in,
