--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2022-08-30 Felix Salfelder <felix AT salfelder.org>
+
+	* support/cpp/configure, support/cpp/configure.ac:
+	  omit gmp/mpfr checks.
+
 2022-08-23 Felix Salfelder <felix AT salfelder.org>
 
 	* support/cpp/configure, support/cpp/configure.ac,
