omit GCC_TOPLEV_SUBDIRS
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/cpp/sdcc@13682 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2022-08-30 Felix Salfelder <felix AT salfelder.org>
 
 	* support/cpp/configure, support/cpp/configure.ac:
-	  omit gmp/mpfr checks.
+	  Omit gmp/mpfr checks and GCC_TOPLEV_SUBDIRS.
 
 2022-08-23 Felix Salfelder <felix AT salfelder.org>
 
