--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2022-09-04 Felix Salfelder <felix AT salfelder.org>
+
+	* support/cpp/gcc/hash-table.h:
+	  Revert a compile warning fix.
+
 2022-09-02 Felix Salfelder <felix AT salfelder.org>
 
 	* support/cpp/gcc/cc1_dummies.cc,
