Optimize out some redundant iTemps.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14084 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2023-05-23 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/SDCCopt.c:
+	  Optimize out some redundant iTemps.
+
+2023-05-23 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* device/lib/stm8/__mululonguchar2ulonglong.s,
 	  device/lib/stm8-large/__mululonguchar2ulonglong.s,
 	  device/lib/stm8/Makefile.in,
