Optimize out some redundant iTemps. Live range separation fixes.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14085 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* src/SDCCopt.c:
 	  Optimize out some redundant iTemps.
+	* src/SDCClrange.c:
+	  Live range separation fixes.
 
 2023-05-23 Philipp Klaus Krause <philipp@colecovision.eu>
 
