Update configure-time host C compiler checks for currently used standard.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14095 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2023-05-30 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* aclocal.m4,
+	  configure,
+	  configure.ac,
+	  sdccconf_in.h:
+	  Update configure-time host C compiler checks for currently used standard.
+
+2023-05-30 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* doc/sdccman.lyx:
 	  Document change in -MMD vs. -MF argument.
 	* .version,
@@ -48,7 +56,7 @@
 	* support/regression/tests/bug-2854.,
 	  support/regression/tests/bug-3474.c,
 	  support/regression/tests/strto.c:
-	  Disable tests for mcs51 medium model that need too much memory since recent strotul fixes (see also RFE #875).
+	  Disable tests for mcs51 medium model that need too much memory since recent strtoul fixes (see also RFE #875).
 
 2023-05-24 Philipp Klaus Krause <philipp@colecovision.eu>
 
