Infrastructure for testing s08 port with --stack-auto.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14096 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2023-05-31 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* configure,
+	  configure.ac,
+	  device/lib/Makefile.in,
+	  device/lib/clean.mk,
+	  device/lib/s08-stack-auto,
+	  support/regression/ports/s08-stack-auto:
+	  Infrastructure for testing s08 port with --stack-auto.
+
 2023-05-30 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* aclocal.m4,
