Prepare for generalized swap / rotation support.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14097 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2023-05-31 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/port.h,
+	  src/SDCCast.c,
+	  src/*/main.c:
+	  Prepare for generalized swap / rotation support.
+
+2023-05-31 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* configure,
 	  configure.ac,
 	  device/lib/Makefile.in,
