Replace RLC, RRC, SWAP by ROT, RFE #877.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14098 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,21 @@
 2023-05-31 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* .version,
+	  doc/sdccman.lyx,
+	  src/SDCC.lex,
+	  src/SDCC.y,
+	  src/SDCCast.c,
+	  src/SDCCcse.c,
+	  src/SDCCicode.c,
+	  src/SDCClospre.cc,
+	  src/SDCCopt.c,
+	  src/*/gen.c,
+	  src/*/main.c,
+	  src/*/ralloc2.cc:
+	  Replace RLC, RRC, SWAP by ROT, RFE #877.
+
+2023-05-31 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/port.h,
 	  src/SDCCast.c,
 	  src/*/main.c:
