--- a/doc/sdccman.lyx
+++ b/doc/sdccman.lyx
@@ -2820,6 +2820,11 @@ In 4.2.14, byte order in output from the %p specifier of printf()-family functio
  uintptr_t.
 \end_layout
 
+\begin_layout Itemize
+In 4.3.1, __builtin_rlc, __builtin_rrc and __builtin_swap were replaced by
+ __builtin_rot.
+\end_layout
+
 \begin_layout Section
 System Requirements
 \end_layout
