Support arbitrary rotations of 8-bit values in pdk code generation.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14100 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2023-05-31 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/pdk/main.c,
+	  src/pdk/gen.c:
+	  Support arbitrary rotations of 8-bit values in pdk code generation.
+
+2023-05-31 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* .version,
 	  doc/sdccman.lyx,
 	  src/SDCC.lex,
