Support arbitrary rotations of 8-bit values in stm8 code generation.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14101 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
 	* src/pdk/main.c,
 	  src/pdk/gen.c:
 	  Support arbitrary rotations of 8-bit values in pdk code generation.
+	* src/stm8/main.c,
+	  src/stm8/gen.c:
+	  Support arbitrary rotations of 8-bit values in stm8 code generation.
 
 2023-05-31 Philipp Klaus Krause <philipp@colecovision.eu>
 
