--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2023-06-01 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCast.c,
+	  src/SDCCsymt.c:
+	  Simplify ROT optimization.
+	* src/stm8/gen.c,
+	  src/stm8/main.c:
+	  Improve stm8 rotations.
+
 2023-05-31 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/pdk/main.c,
