--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2023-06-02 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/z80/main.c,
+	  src/z80/gen.c:
+	  z80 rotation fixes.
+	* src/pdk/main.c,
+	  src/pdk/gen.c,
+	  src/pdk/peeph.def:
+	  Improve pdk rotatins.
+
 2023-06-01 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCast.c,
