Improve z80 rotations (mostly for 8-bit values).
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14105 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@
 
 	* src/z80/main.c,
 	  src/z80/gen.c:
-	  z80 rotation fixes.
+	  Improve z80 rotations.
 	* src/pdk/main.c,
 	  src/pdk/gen.c,
 	  src/pdk/peeph.def:
