Improve mcs51 rotations.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14108 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,9 @@
 	  src/pdk/gen.c,
 	  src/pdk/peeph.def:
 	  Improve pdk rotations.
+	* src/mcs51/main.c,
+	  src/mcs51/gen.c:
+	  Improve mcs51 rotations.
 
 2023-06-01 Philipp Klaus Krause <philipp@colecovision.eu>
 
