Improve hc08 rotations.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14109 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,9 @@
 	* src/mcs51/main.c,
 	  src/mcs51/gen.c:
 	  Improve mcs51 rotations.
+	* src/hc08/main.c,
+	  src/hc08/gen.c:
+	  Improve hc08 rotations.
 
 2023-06-01 Philipp Klaus Krause <philipp@colecovision.eu>
 
