Disable trigraph test for host, since many host compilers no longer support trigraphs.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14113 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-06-03 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* support/regression/MakeList:
+	  Disable trigraph test for host, since many host compilers no longer support trigraphs.
+
 2023-06-02 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* support/regression/ports/host/spec.mk.in:
