--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* src/z80/gen.c:
 	  Improve z80 rotation.
+	* src/mcs51/ralloc.c:
+	  Work around a mcs51 register saving issue (codegen cannot handle a return value in a bit if other bits are live at the call).
 
 2023-06-03 Philipp Klaus Krause <philipp@colecovision.eu>
 
