--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2023-06-07 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/SDCCsymt.c,
+	  src/hc08/gen.c:
+	  Caller-side support for hc08/s08 struct/union return.
+
+2023-06-07 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/z80/gen.c:
 	  Improve z80 rotation.
 	* src/mcs51/ralloc.c:
