hc08/s08 --stack-auto struct/union parameters.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14121 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2023-06-07 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/hc08/gen.c:
+	  hc08/s08 --stack-auto struct/union parameters.
+
+2023-06-07 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/SDCCsymt.c,
 	  src/hc08/gen.c:
 	  Caller-side support for hc08/s08 struct/union return.
