--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-06-08 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/hc08/gen.c:
+	  Fix stacked hx result in shifts.
+
 2023-06-07 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/hc08/gen.c:
