Exclude some tests that need features not yet supported by s08 from s08-stack-auto testing.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14123 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* src/hc08/gen.c:
 	  Fix stacked hx result in shifts.
+	* support/regression/MakeList:
+	  Exclude some tests that need features not yet supported by s08 from s08-stack-auto testing.
 
 2023-06-07 Philipp Klaus Krause <philipp@colecovision.eu>
 
