--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2023-06-08 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/hc08/gen.c,
+	  support/regression/MakeList:
+	  Catch bug #3598 early.
+
+2023-06-08 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/hc08/gen.c:
 	  Fix stacked hx result in shifts.
 	* support/regression/MakeList:
