Document hc08/s08 struct/union parameter support.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14129 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* support/regression/MakeList:
 	  Disable tests that fail due to known -ms08 --stack-auto bugs.
+	* doc/sdccman.lyx:
+	  Document hc08/s08 struct/union parameter support.
 
 2023-06-08 Philipp Klaus Krause <philipp@colecovision.eu>
 
