--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2023-06-10 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCdflow.h,
+	  src/SDCCicode.c,
+	  src/SDCCicode.h,
+	  src/SDCClrange.c,
+	  src/SDCCopt.c,
+	  src/SDCCgenconstprop.cc:
+	  A first proof-of-concept for generalized constant propagation analysis.
+
 2023-06-02 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCast.c:
