Store operands of IFX and JUMPTAB the same way as operands of other iCodes.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14137 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-06-10 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCicode.h:
+	  Store operands of IFX and JUMPTAB the same way as operands of other iCodes.
+
 2023-06-08 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* support/regression/MakeList:
