Refactor proof-of-concept for generalized constant propagation analysis using new iCode operand handling.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/genconstprop/sdcc@14139 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2023-06-10 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/SDCCgenconstprop.cc:
+	  Refactor proof-of-concept for generalized constant propagation analysis using new iCode operand handling.
+
+2023-06-10 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/SDCCicode.h:
 	  Store operands of IFX and JUMPTAB the same way as operands of other iCodes.
 
