Improve proof-of-concept for generalized constant propagation analysis and optimization to the point hwere it almost passes regression tests.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/genconstprop/sdcc@14140 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2023-06-10 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCgenconstprop.cc:
+	  Improve proof-of-concept for generalized constant propagation analysis and optimization to the point hwere it almost passes regression tests.
+
+2023-06-10 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCgenconstprop.cc:
 	  Refactor proof-of-concept for generalized constant propagation analysis using new iCode operand handling.
 
 2023-06-10 Philipp Klaus Krause <philipp@colecovision.eu>
