Introduce --nogenconstprop option.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/genconstprop/sdcc@14142 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 
 	* src/SDCCgenconstprop.cc:
 	  Improve proof-of-concept for generalized constant propagation analysis and optimization to the point hwere it almost passes regression tests.
+	* src/SDCCglobl.h,
+	  src/SDCCmain.c,
+	  src/SDCCopt.c:
+	  Introduce --nogenconstprop option.
 
 2023-06-10 Philipp Klaus Krause <philipp@colecovision.eu>
 
