Keep resultvalinfo at iCode for better optimization based on generalized constant propagation.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/genconstprop/sdcc@14144 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2023-06-10 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCgenconstprop.cc:
-	  A few more bits of generalized constant propagation analysis.
+	  A few more bits of generalized constant propagation analysis and optimization.
 
 2023-06-10 Philipp Klaus Krause <philipp@colecovision.eu>
 
