Work around an issue in inlining _Generic results to mitigate strtotul code size regression.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14146 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-06-11 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* device/include/stdckdint.h:
+	  Work around an issue in inlining _Generic results to mitigate strtotul code size regression.
+
 2023-06-10 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCicode.h:
