--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2023-06-11 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/SDCCgenconstprop.cc:
+	  Improve generalized constant propagation analysis.
+
+2023-06-11 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* device/include/stdckdint.h:
 	  Work around an issue in inlining _Generic results to mitigate strtotul code size regression.
 
