Basic generalized constant propagation operation narrowing optimization.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/genconstprop/sdcc@14149 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2023-06-11 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/SDCCdflow.h,
+	  src/SDCCgenconstprop.cc,
+	  src/SDCCsymt.c,
+	  src/SDCCsymt.h:
+	  Basic generalized constant propagation operation narrowing optimization.
+
+2023-06-11 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/SDCCgenconstprop.cc:
 	  Improve generalized constant propagation analysis.
 
