--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2023-06-12 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/SDCCBBlock.c,
+	  src/SDCCglobl.h,
+	  src/SDCCopt.c:
+	  Dump iCode after generalized constant propagation.
+
+2023-06-12 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/SDCClrange.c:
 	  Fix a corner case in live-range separation that would hang SDCC on compiling the pic14 library (and result in some missed optimizations for other ports).
 	* src/pdk/gen.c:
