--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2023-06-12 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/SDCCopt.c:
+	  Fix an issue in handling parameters during conversion of builtin functions at the beginning of a basic block.
+
+2023-06-12 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/SDCCBBlock.c,
 	  src/SDCCglobl.h,
 	  src/SDCCopt.c:
