--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2023-06-13 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/mos6502/gen.c
+	  Fix negation of literals for mos6502.
+	* src/SDCCgenconstprop.cc:
+	  Fix handling of __bit in generalized constant propagation analysis.
+
 2023-06-12 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCopt.c:
