Fixes and improvements for generalized constant propagation optimization.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/genconstprop/sdcc@14159 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2023-06-13 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/SDCCgenconstprop.cc:
+	  Fixes and improvements for generalized constant propagation optimization.
+
+2023-06-13 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/mos6502/gen.c
 	  Fix negation of literals for mos6502.
 	* src/SDCCgenconstprop.cc:
