Improve generalized constant propagation optimization and analysis.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/genconstprop/sdcc@14160 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2023-06-13 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCgenconstprop.cc:
-	  Fixes and improvements for generalized constant propagation optimization.
+	  Fixes and improvements for generalized constant propagation optimization and analysis.
 
 2023-06-13 Philipp Klaus Krause <philipp@colecovision.eu>
 
