Basic generalized constant propgation analysis and optimization for individual operand bits.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/genconstprop/sdcc@14167 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2023-06-15 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCdflow.h,
+	  src/SDCCgenconstprop.cc,
+	  src/SDCCopt.c,
+	  src/z80/gen.c,
+	  src/z80/gen.h,
+	  src/z80/ralloc2.cc,
+	  src/stm8/gen.c,
+	  src/stm8/gen.h,
+	  src/stm8/ralloc2.cc:
+	  Basic generalized constant propgation analysis and optimization for individual operand bits.
+
 2023-06-13 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCgenconstprop.cc:
