--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
 2023-06-18 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCgenconstprop.cc,
-	  src/z80/gen.c:
-	  Use information from generalized constant propagation analysis in z80 code generation.
+	  src/z80/gen.c,
+	  src/pdk/gen.c:
+	  Use information from generalized constant propagation analysis in code generation.
 
 2023-06-15 Philipp Klaus Krause <philipp@colecovision.eu>
 
