Use information from generalized constant propagation analysis in stm8 code generation.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/genconstprop/sdcc@14172 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,8 @@
 
 	* src/SDCCgenconstprop.cc,
 	  src/z80/gen.c,
-	  src/pdk/gen.c:
+	  src/pdk/gen.c,
+	  src/stm8/gen.c:
 	  Use information from generalized constant propagation analysis in code generation.
 
 2023-06-15 Philipp Klaus Krause <philipp@colecovision.eu>
