Improve generalized constant propgation analysis and optimization.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/genconstprop/sdcc@14173 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 2023-06-18 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCgenconstprop.cc,
+	  src/pdk/gen.c:
+	  Improve generalized constant propgation analysis and optimization.
+
+2023-06-18 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCgenconstprop.cc,
 	  src/z80/gen.c,
 	  src/pdk/gen.c,
 	  src/stm8/gen.c:
