--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-06-20 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCgenconstprop.cc:
+	  Improve generalized constant propgation analysis and optimization.
+
 2023-06-19 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/hc08/gen.c,
