Further use of information from generalized constant propagation analysis in code generation.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/genconstprop/sdcc@14178 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,12 @@
 
 	* src/SDCCgenconstprop.cc:
 	  Improve generalized constant propgation analysis and optimization.
+	* src/hc08/gen.c,
+	  src/pdk/gen.c,
+	  src/stm8/gen.c,
+	  src/z80/gen.c,
+	  src/mos6502/ralloc2.cc:
+	  Further use of information from generalized constant propagation analysis in code generation.
 
 2023-06-19 Philipp Klaus Krause <philipp@colecovision.eu>
 
