--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2023-06-20 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/SDCCgenconstprop.cc:
+	  Improve generalized constant propagation analysis.
+
+2023-06-20 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/SDCCBBlock.c,
 	  src/SDCCgenconstprop.cc,
 	  src/SDCCopt.c,
@@ -30,7 +35,7 @@
 
 	* src/SDCCgenconstprop.cc,
 	  src/pdk/gen.c:
-	  Improve generalized constant propgation analysis and optimization.
+	  Improve generalized constant propagation analysis and optimization.
 
 2023-06-18 Philipp Klaus Krause <philipp@colecovision.eu>
 
