--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2023-06-20 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCgenconstprop.cc:
-	  Improve generalized constant propagation analysis.
+	  Improve generalized constant propagation analysis and optimization.
 
 2023-06-20 Philipp Klaus Krause <philipp@colecovision.eu>
 
