--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,8 @@
 
 	* src/SDCCgenconstprop.cc,
 	  src/SDCCopt.c,
-	  src/hc08/main.c:
+	  src/hc08/main.c,
+	  src/*/ralloc2.cc:
 	  Fixes for generalized constant propagation and support functions for _BitInt.
 
 2023-06-20 Philipp Klaus Krause <philipp@colecovision.eu>
