--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2023-06-27 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCast.c,
+	  support/valdiag/tests/bug-3603.c:
+	  Fix bug #3603.
+
 2023-06-15 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCBBlock.c,
