Improve error message on invalid -mmarch option, part of RFE #881.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14188 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,10 @@
 	* src/SDCCast.c,
 	  support/valdiag/tests/bug-3603.c:
 	  Fix bug #3603.
+	* src/SDCCmain.c,
+	  src/pdk/main.c,
+	  src/z80/main.c:
+	  Improve error message on invalid -mmarch option, part of RFE #881.
 
 2023-06-15 Philipp Klaus Krause <philipp@colecovision.eu>
 
