Improve interval / bit synchronization in generalized constant propagation analysis.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/genconstprop/sdcc@14190 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2023-06-27 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/SDCCgenconstprop.cc:
+	  Improve interval / bit synchronization in generalized constant propagation analysis.
+
+2023-06-27 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/SDCCast.c,
 	  support/valdiag/tests/bug-3603.c:
 	  Fix bug #3603.
