Improve 16-bit comparisons.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14193 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-06-30 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/stm8/gen.c:
+	  Improve 16-bit comparisons.
+
 2023-06-27 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCast.c,
