Basic generalized constant propagation analysis for pdk pointers.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/genconstprop/sdcc@14200 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2023-07-02 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCgenconstprop.cc:
+	  Basic generalized constant propagation analysis for pdk pointers.
+
+2023-07-02 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCgenconstprop.cc:
 	  Fix dumping of generalized constant propagation analysis graph debug info for initialization of global objects.
 
 2023-07-01 Philipp Klaus Krause <philipp@colecovision.eu>
