Basic generalized constant propagation analysis for mcs51 pointers.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/genconstprop/sdcc@14201 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2023-07-02 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCgenconstprop.cc:
-	  Basic generalized constant propagation analysis for pdk pointers.
+	  Basic generalized constant propagation analysis for pdk and mcs51 pointers.
 
 2023-07-02 Philipp Klaus Krause <philipp@colecovision.eu>
 
