--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-07-03 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/ds390/gen.c:
+	  Fix an issue in ds390 casts to _BitInt.
+
 2023-07-01 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/mcs51/gen.c,
