--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2023-07-03 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/SDCCopt.c:
+	  Fix a compiler crash due to operation narrowing invaldiating iCode seuqence numbers.
+
+2023-07-03 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/ds390/gen.c:
 	  Fix an issue in ds390 casts to _BitInt.
 
