Infrastructure for r800 port.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/r800/sdcc@14243 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,7 +8,10 @@
 	  configure.ac,
 	  src/SDCCmain.c,
 	  src/port.h,
-	  src/z80/main.c:
+	  src/z80/main.c,
+	  src/SDCCglue.c,
+      src/z80/gen.c,
+      src/z80/z80.h:
 	  Infrastructure for r800 port.
 
 2023-07-27 Philipp Klaus Krause <philipp@colecovision.eu>
