--- a/ChangeLog
+++ b/ChangeLog
@@ -11,8 +11,9 @@
 	  src/z80/main.c,
 	  src/SDCCglue.c,
       src/z80/gen.c,
-      src/z80/z80.h:
-	  Infrastructure for r800 port.
+      src/z80/z80.h,
+      src/z80/peep.c:
+	  Infrastructure for r800 port, use multu for 8x8->16 multiplication.
 
 2023-07-27 Philipp Klaus Krause <philipp@colecovision.eu>
 
