Infrastructure for future r800 regression testing.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/r800/sdcc@14253 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-07-31 Philipp Klaus Krause <pkk@spth.de>
+
+	* support/regression/ports/ucr800/spec.mk:
+	  Infrastructure for future r800 regression testing.
+
 2023-07-31 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCgenconstprop.cc,
