--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2023-08-27 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* support/regression/fwk/include/testfwk.h,
+	  support/regression/ports/ucr800/spec.mk:
+	  r800 regression test infrstructure.
+
 2023-08-27 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* support/regression/tests/bug-3165.c: enabled for mcs51 & ds390,
