--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 	* support/regression/fwk/include/testfwk.h,
 	  support/regression/ports/ucr800/spec.mk:
 	  r800 regression test infrstructure.
+	* src/z80/gen.c:
+	  r800 calling convention fix.
 
 2023-08-27 Maarten Brock <sourceforge.brock AT dse.nl>
 
