Fixes for R800 multiplication instructions.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/r800/sdcc@14329 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2023-08-27 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* sim/ucsim/z80.src/inst_ed.cc,
+	  src/z80/gen.c,
+	  src/z80/peep.c:
+	  Fixes for R800 multiplication instructions.
+
 2023-08-27 Felix Salfelder <felix AT salfelder.org>
 
 	* support/regression/Makefile.in: deal with longer subresult list.
