--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-12-27 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/z80/peep.c:
+	  Improve handling of I/O and tail calls, fixes bug #3688.
+
 2023-12-20 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* doc/sdccman.lyx:
