--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 
 	* src/z80/peep.c:
 	  Improve handling of I/O and tail calls, fixes bug #3688.
+	* src/SDCCerr.c,
+	  src/SDCCerr.h,
+	  src/SDCCpeeph.c:
+	  Peephole rule application limit, fixes bug #3557.
 
 2023-12-20 Philipp Klaus Krause <philipp@colecovision.eu>
 
