Peephole optimizer rule to optimize another variant of __code array access.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14556 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
 	  Peephole rule application limit, fixes bug #3557.
 	* src/SDCCgenconstprop.cc:
 	  Improve narrowing of multiplicative operators based on generalized constant propagation.
+	* src/mcs51/peeph.def:
+	  Peephole optimizer rule to optimize another variant of __code array access.
 
 2023-12-20 Philipp Klaus Krause <philipp@colecovision.eu>
 
