Optimize out some unnecessary register use.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14559 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-12-28 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/mcs51/peeph.def:
+	  Optimize out some unnecessary register use.
+
 2023-12-27 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/z80/peep.c:
