--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-12-28 Gabriele Gorla <gorlik@yahoo.com>
+	* device/lib/mos6502/_divuchar.s,
+	  device/lib/mos6502/_moduchar.s:
+	  Fix regression failures introduced by r14555
+
 2023-12-28 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/mcs51/peeph.def:
