Fix bug #2987 and enable gcc-torture-execute-strlen-4 for mos6502 and hc08.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14561 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 	* device/lib/mos6502/_divuchar.s,
 	  device/lib/mos6502/_moduchar.s:
 	  Fix regression failures introduced by r14555
+	* src/mos6502/gen.c,
+	  src/hc08/gen.c,
+	  support/regression/tests/gcc-torture-execute-strlen-4.c:
+	  Fix bug #2987 and enable gcc-torture-execute-strlen-4 for mos6502 and hc08.
 
 2023-12-28 Philipp Klaus Krause <philipp@colecovision.eu>
 
