--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
 	  src/hc08/gen.c,
 	  support/regression/tests/gcc-torture-execute-strlen-4.c:
 	  Fix bug #2987 and enable gcc-torture-execute-strlen-4 for mos6502 and hc08.
+	* src/SDCCicode.c:
+	  Fix small debug print bug.
 
 2023-12-28 Philipp Klaus Krause <philipp@colecovision.eu>
 
