Fix affected flags and add "sec".
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14563 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2023-12-28 Gabriele Gorla <gorlik@yahoo.com>
+
 	* device/lib/mos6502/_divuchar.s,
 	  device/lib/mos6502/_moduchar.s:
 	  Fix regression failures introduced by r14555
@@ -8,6 +9,8 @@
 	  Fix bug #2987 and enable gcc-torture-execute-strlen-4 for mos6502 and hc08.
 	* src/SDCCicode.c:
 	  Fix small debug print bug.
+	* src/mos6502/peep.c:
+	  Fix affected flags and add "sec".
 
 2023-12-28 Philipp Klaus Krause <philipp@colecovision.eu>
 
