--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,8 @@
 	  Fix small debug print bug.
 	* src/mos6502/peep.c:
 	  Fix affected flags and add "sec".
+	* src/mos6502/gen.c:
+	  Minor code cleanups
 
 2023-12-28 Philipp Klaus Krause <philipp@colecovision.eu>
 
