--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@
 	  Fix affected flags and add "sec".
 	* src/mos6502/gen.c:
 	  Minor code cleanups
+	  Make comments style consistent
 
 2023-12-28 Philipp Klaus Krause <philipp@colecovision.eu>
 
