remove unused aop_immd2 from aop structure.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14566 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2023-12-29 Gabriele Gorla <gorlik@yahoo.com>
+
+	* src/mos6502/gen.c,
+	  src/mos6502/gen.h,
+	  src/hc08/gen.c,
+	  src/hc08/gen.h:
+	  remove unused aop_immd2 from aop structure.
+	
 2023-12-28 Gabriele Gorla <gorlik@yahoo.com>
 
 	* device/lib/mos6502/_divuchar.s,
