--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* src/pdk/peep.c:
 	  pdk peephole optimizer improvmenets, mostly from patch #447 by Konstantin Kim.
+	* support/regression/tests/iobit.c.in:
+	  Improve test coverage for bit access on __sfr, inspired by discussion of patch #447.
 
 2023-12-29 Gabriele Gorla <gorlik@yahoo.com>
 
