Prepare for improved register pair handling.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14573 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,7 +7,9 @@
 	  Prepare for improved register pair handling.
 	* src/mos6502/gen.c:
 	  correct constant size in isLiteralBit().
-
+	* src/mos6502/gen.c:
+	  Prepare for improved register pair handling.
+	  
 2023-12-29 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/pdk/peep.c:
