Fixes for z flag handling in pdk peephole optimizer rules.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14574 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-12-30 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/pdk/peeph.def:
+	  Fixes for z flag handling in pdk peephole optimizer rules.
+
 2023-12-29 Gabriele Gorla <gorlik@yahoo.com>
 
 	* src/mos6502/gen.c:
