Fix notVolatile('a') for pdk.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14576 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
 	* src/pdk/gen.c,
 	  src/pdk/peeph.def:
 	  Optimize out some redundant stores to a, insprired by parts of patch #447 by Konstantin Kim.
+	* src/SDCCpeeph.c:
+	  Fix notVolatile('a') for pdk.
 
 2023-12-29 Gabriele Gorla <gorlik@yahoo.com>
 
