Improve flag handling in pdk peephole optimizer.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14577 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@
 	  Optimize out some redundant stores to a, insprired by parts of patch #447 by Konstantin Kim.
 	* src/SDCCpeeph.c:
 	  Fix notVolatile('a') for pdk.
+	* src/pdk/peep.c:
+	  Improve flag handling in pdk peephole optimizer.
 
 2023-12-29 Gabriele Gorla <gorlik@yahoo.com>
 
