Improve flag handling in z80 peephole optimizer.
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/next/sdcc@14578 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@
 	  Fix notVolatile('a') for pdk.
 	* src/pdk/peep.c:
 	  Improve flag handling in pdk peephole optimizer.
+	* src/z80/peep.c:
+	  Improve flag handling in z80 peephole optimizer.
 
 2023-12-29 Gabriele Gorla <gorlik@yahoo.com>
 
